# hcai

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
model-building/: Diamond model.ipynb  corr.xlsx  features.txt
model-building/best/: linear_model.sav  linear_model_2.sav
model-building/shap/: rf_shap_values.sav  test_data_summary.sav  x_test.sav
src/: manage.py
src/hcai/: __init__.py  admin.py  asgi.py  formsendpoint.py  good_app.py  model.py  settings.py  urls.py  wsgi.py
src/hcai/app/: forms.py  home.py  models.py
src/hcai/app/bad_app/: explanation.py  home.py  privacy.py  questionaire.py  result.py
src/hcai/app/good_app/: explanation.py  home.py  privacy.py  questionaire.py  result.py
src/hcai/app/test_app/: test_app.py  test_form.py
src/hcai/libs/: img.py  model.py
src/hcai/libs/models/: random_forest_model.sav  scaler.sav
src/hcai/libs/models/shap/: linear_shap_values.sav
src/hcai/migrations/: 0001_initial.py  0002_badappinput_goodappinput.py
src/hcai/templates/: base.html  home.html
src/hcai/templates/hcai/: good_app.html  name.html  test.html
src/hcai/templates/hcai/bad_app/: explanation.html  home.html  privacy.html  questionaire.html  result.html
src/hcai/templates/hcai/bad_app/components/: ba_base.html  ga_base.html  nav.html
src/hcai/templates/hcai/good_app/: explanation.html  home.html  privacy.html  questionaire.html  result.html
src/hcai/templates/hcai/good_app/components/: ga_base.html  nav.html
