[tool.poetry]
name = "hcai"
version = "0.1.0"
description = ""
authors = ["Stijn van Houwelingen <stijn@van-houwelingen.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
django = "^4.2.5"
django-tailwind = {extras = ["reload"], version = "^3.6.0"}
cookiecutter = "^2.3.1"
pandas = "^2.1.1"
seaborn = "^0.13.0"
matplotlib = "^3.8.0"
shap = "^0.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "python src/manage.py runserver"
