[tool.poetry]
name = "hcai"
version = "0.1.0"
description = ""
authors = ["Stijn van Houwelingen <stijn@van-houwelingen.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
django = "^4.2.5"
django-tailwind = {extras = ["reload"], version = "^3.6.0"}
cookiecutter = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
#"python src/manage.py runserver"
#"python src/manage.py tailwind start"